adds class GamePlayersActivity for selecting players for a game, layout is placeholder only based on items layout; Also started MyGamesList view but is not even close to working yet

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name="MainMenuActivity" android:label="MainMenu"></activity>
         <activity android:name="NewGameActivity" android:label="NewGame"></activity>
         <activity android:name="GameItemsActivity" android:label="GameItems"></activity>
+        <activity android:name="GamePlayersActivity" android:label="GamePlayers"></activity>
     </application>
 
 </manifest>
