--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name="GameItemsActivity" android:label="GameItems"></activity>
         <activity android:name="GamePlayersActivity" android:label="GamePlayers"></activity>
         <activity android:name="MyGamesList" android:label="MyGames"></activity>
+        <activity android:name="ViewGame" android:label="ViewGame"></activity>
     </application>
 
 </manifest>
