--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -32,7 +32,8 @@
         <activity android:name="GamePlayersActivity" android:label="GamePlayers"></activity>
         <activity android:name="MyGamesList" android:label="MyGames"></activity>
         <activity android:name="ViewGame" android:label="ViewGame"></activity>
-        <activity android:name="EditGameNameTime" android:label="EditGame"></activity>
+        <activity android:name="EditGame" android:label="EditGame"></activity>
+        <activity android:name="EditGameNameTime" android:label="EditGameNameTime"></activity>
     </application>
 
 </manifest>
